Fix bug 254375 by quoting negative integer property ids in js_obj_toSource.